unpackaged/main/default/objects/Voucher__c/Voucher__c.object-meta.xml
<CustomObject>
    <description>Used to redeem against service provider services, e.g. Phlebotomy services</description>
    <label>Voucher</label>
    <nameField>
        <displayFormat>VCR-{0000000}</displayFormat>
        <label>Voucher Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vouchers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>