unpackaged/main/default/objects/Voucher__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>