unpackaged/main/default/objects/Voucher__c/fields/Phlebotomy__c.field-meta.xml
<CustomField>
    <fullName>Phlebotomy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phlebotomy</label>
    <referenceTo>Phlebotomy__c</referenceTo>
    <relationshipLabel>Vouchers</relationshipLabel>
    <relationshipName>Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>