unpackaged/main/default/objects/Voucher__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <label>Service Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Randox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>