unpackaged/main/default/objects/Voucher__c/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <label>Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>OPT003-V</fullName>
            </value>
            <value>
                <fullName>OPT013-V</fullName>
            </value>
            <value>
                <fullName>OPT002-V</fullName>
            </value>
            <value>
                <fullName>OPT004-V</fullName>
            </value>
            <value>
                <fullName>OPT002-RDOX</fullName>
                <isActive>false</isActive>
                <label>OPT002-RDOX</label>
            </value>
            <value>
                <fullName>OPT003-RDOX</fullName>
                <isActive>false</isActive>
                <label>OPT003-RDOX</label>
            </value>
            <value>
                <fullName>OPT004-RDOX</fullName>
                <isActive>false</isActive>
                <label>OPT004-RDOX</label>
            </value>
            <value>
                <fullName>OPT013-RDOX</fullName>
                <isActive>false</isActive>
                <label>OPT013-RDOX</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>