unpackaged/main/default/objects/Voucher__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Provider__c</columns>
    <columns>Test_Type__c</columns>
    <columns>Code__c</columns>
    <columns>Redeemed__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>