unpackaged/main/default/objects/Voucher__c/listViews/Unredeemed_vouchers.listView-meta.xml
<ListView>
    <fullName>Unredeemed_vouchers</fullName>
    <columns>NAME</columns>
    <columns>Service_Provider__c</columns>
    <columns>Test_Type__c</columns>
    <columns>Code__c</columns>
    <columns>Redeemed__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Redeemed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unredeemed vouchers</label>
</ListView>